# medirag

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  wf.py
.github/workflows/: syn_to_hf.yaml  syn_to_hf.yml
data/dm_spl_release_human_rx_part1/: default__vector_store.json  docstore.json  index_store.json
medirag/cache/: abc.py  local.py  util.py
medirag/core/: data_manager.py  document_processor.py  reader.py
medirag/guardrail/: input.py  output.py
medirag/index/: abc.py  common.py  ingest.py  kdbai.py  lance.py  local.py  ptc.py  publisher.py  runner.py  utils.py
medirag/rag/: dspy.py  llama_index.py  pipeline.py  qa.py  qa_rag.py  wf.py
misc/: create_kdbai_table.py
tests/cache/: test_semantic_cache.py
tests/core/: test_document_processor.py  test_xml_reader.py
tests/data/: BE27854A-A805-4300-9729-ACCD1B7F226F.xml
tests/data/daily_bio_bert_indexed/: default__vector_store.json  docstore.json  index_store.json
tests/data/daily_med_indexed/: default__vector_store.json  docstore.json  index_store.json
tests/index/: test_lance.py  test_runner.py
tests/rag/: test_dspy_rag.py  test_llama_index_wf.py  test_rag.py  test_wf.py
