[tool.poetry]
name = "medirag"
version = "0.1.0"
description = ""
authors = ["Alvin Henrick <share.code@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-index-core = ">=0.11.3"
llama-index-readers-file = ">=0.2.0"
llama-index-vector-stores-faiss = ">=0.2.1"
llama-index-utils-workflow = ">=0.2.0"
llama-index-embeddings-huggingface = ">=0.3.1"
llama-index-llms-openai = ">=0.2.0"
llama-index-agent-openai = ">=0.3.0"
llama-index-vector-stores-kdbai = ">=0.3.1"
llama-index-embeddings-openai = ">=0.2.3"
beautifulsoup4 = ">=4.12.3"
lxml = ">=5.3.0"
langchain = ">=0.2.15"
faiss-cpu = ">=1.8.0.post1"
sentence-transformers = ">=3.0.1"
tqdm = ">=4.66.5"
transformers = ">=4.44.2"
torch = ">=2.4.0"
nltk = ">=3.9.1"
dspy-ai = ">=2.4.13"
python-dotenv = ">=1.0.1"
accelerate = ">=0.33.0"
gradio = ">=4.42.0"
pydantic = ">=2.8.2"
kdbai-client = ">=1.2.4"
loguru = "^0.7.2"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
types-requests = "^2.32.0.20240712"
mypy = "^1.11.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"


[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
# Same as Black.
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv -s"
testpaths = "tests"
