[project]
name = "medirag"
version = "0.1.0"
description = ""
authors = [{ name = "Alvin Henrick", email = "share.code@aol.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "llama-index-core>=0.12.16.post1",
    "llama-index-readers-file>=0.4.5",
    "llama-index-vector-stores-faiss>=0.3.0",
    "llama-index-utils-workflow>=0.2.2",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-llms-openai<0.4.0",
    "llama-index-agent-openai>=0.4.5",
    "llama-index-vector-stores-kdbai>=0.5.0",
    "llama-index-embeddings-openai>=0.3.1",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "langchain>=0.3.18",
    "faiss-cpu>=1.10.0",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.66.6",
    "transformers>=4.48.3",
    "torch>=2.6.0",
    "nltk>=3.9.1",
    "dspy-ai>=2.6.2",
    "python-dotenv>=1.0.1",
    "accelerate>=1.3.0",
    "gradio>=5.15.0",
    "pykx==2.5.3",
    "kdbai_client==1.6.0",
    "loguru>=0.7.3",
    "clean-text>=0.6.0,<0.7",
    "hatchling>=1.27.0",
]

[project.entry-points.dotenv]
location = ".env"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pre-commit>=3.8.0,<4",
    "pytest-cov>=5.0.0,<6",
    "types-requests>=2.32.0.20240712,<3",
    "mypy>=1.11.1,<2",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-dotenv>=0.5.2,<0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
# Same as Black.
line-length = 120

[tool.pytest.ini_options]
addopts = "-vvv -s"
testpaths = "tests"
