[project]
name = "medirag"
version = "0.1.0"
description = ""
authors = [{ name = "Alvin Henrick", email = "share.code@aol.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "sentence-transformers>=3.4.1",
    "transformers>=4.48.3",
    "torch>=2.6.0",
    "dspy>=3.1.3",
    "python-dotenv>=1.0.1",
    "gradio>=6.15.0",
    "loguru>=0.7.3",
    "lancedb>=0.30.2",
    "pyarrow>=19.0.0",
    "tantivy>=0.26.0",
    "huggingface_hub>=1.5.0",
    "requests>=2.32.0",
]

[project.entry-points.dotenv]
location = ".env"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pre-commit>=3.8.0,<4",
    "pytest-cov>=5.0.0,<6",
    "types-requests>=2.32.0.20240712,<3",
    "mypy>=1.11.1,<2",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-dotenv>=0.5.2,<0.6",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
# Same as Black.
line-length = 120

[tool.pytest.ini_options]
addopts = "-vvv -s"
testpaths = "tests"
